# vizionsdk

./: .gitattributes  .gitignore  LICENSE  NOTICE.md  README.md
.github/: CODEOWNERS
Samples/: CMakeLists.txt  README.md  VizionSDK.h  VizionSample.cpp
Samples/Linux/: Makefile  ReadMe.md  main.cpp
Samples/Windows/: ReadMe.md  VizionSDK.h  VizionSample.cpp
Samples/src/: main.cpp  sample.cpp  sample.h
config/: VxBSLMode.yaml  VxConfig.conf  VxExposure.yaml
config/RouteConfig/: VxRoute_iMX95_CSI1.yaml  VxRoute_iMX95_GMSL_CSI1_CSI2.yaml  VxRoute_iMX95_GMSL_CSI2.yaml
config/route_config/: VxRoute_RaspberryPi5.yaml  VxRoute_iMX93_CSI1.yaml  VxRoute_iMX95_CSI1.yaml  VxRoute_iMX95_CSI1CSI2.yaml  VxRoute_iMX95_CSI2.yaml  VxRoute_iMX95_GMSL_2CAM_CSI1.yaml  VxRoute_iMX95_GMSL_CSI1.yaml  VxRoute_iMX95_GMSL_CSI1_CSI2.yaml
lib/IMX/: libVizionSDK.so.24  libVizionSDK.so.24.11.1  libVizionSDK.so.24.2.4  libVizionSDK.so.24.6.1  libVizionSDK.so.24.8.3  libVizionSDK.so.24.8.5
lib/TI/: libVizionSDK.so.24  libVizionSDK.so.24.8.3  libVizionSDK.so.24.8.4
samples/: README.md
samples/sample1 - hello_vizionsdk/: CMakeLists.txt  main.cpp
samples/sample2 - camera_capture/: CMakeLists.txt  main.cpp
samples/sample3 - camera_control/: CMakeLists.txt  main.cpp
